@@ -2,6 +2,7 @@ Changelog for Articles.
 
 Articles 1.5.0
 ===============================
+- [#7559] Display ID of Article in articles grid
 - [#7550] Fix JS issue with Create New Article button
 - [#7313] Ensure that the archive URI is always set prior to notifications during a publishing event
 - [#7419] Add ability to duplicate single Articles
